--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,19 +1,16 @@
-environment:
-  ARTIFACTORY_USERNAME:
-    secure: a6JBc7qqVHrcq1cCIJblEg==
-  ARTIFACTORY_PASSWORD:
-    secure: O6ThMzLvtSOPLV0U5yFOkl8G1tFrFOGZEpKI4NSD12c=
-
 build: off
 
 build_script:
-  - gradlew -PArtifactoryUserName=%ARTIFACTORY_USERNAME% -PArtifactoryPassword=%ARTIFACTORY_PASSWORD% build
+  - gradlew build
 
 test_script:
   - gradlew test
 
 after_test:
-  - IF NOT DEFINED APPVEYOR_PULL_REQUEST_NUMBER gradlew -PArtifactoryUserName=%ARTIFACTORY_USERNAME% -PArtifactoryPassword=%ARTIFACTORY_PASSWORD% uploadArchives
+  - gradlew distZip
+
+artifacts:
+  - path: build\distributions\*
 
 cache:
   - '%HOME%\.gradle -> build.gradle'
