--- a/build.gradle
+++ b/build.gradle
@@ -86,7 +86,7 @@ jar {
     manifest {
         attributes(
             "Main-Class": mainClassName,
-            "Main-Verticle": "com.glencoesoftware.omero.ms.thumbnail.ThumbnailMicroserviceVerticle"
+            "Main-Verticle": "com.glencoesoftware.omero.ms.image.region.ImageRegionMicroserviceVerticle"
         )
     }
 }
