--- a/conf.json.example
+++ b/conf.json.example
@@ -5,6 +5,13 @@
         "host": "localhost",
         "port": 4064
     },
+    "omero.server": {
+        "omero.data.dir": "/OMERO",
+        "omero.db.host": "localhost",
+        "omero.db.port": "5432",
+        "omero.db.user": "omero",
+        "omero.db.pass": "omero"
+    },
     "redis": {
         "uri": "redis://password@localhost:6379/1"
     }
