--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ configurations.all {
     exclude group: 'backport-util-concurrent'
     exclude group: 'batik'
     exclude group: 'cglib'
+    exclude group: 'checkstyle'
     exclude group: 'com.jamonapi'
     exclude group: 'com.mortennobel'
     exclude group: 'com.zeroc', module: 'freeze'
@@ -53,22 +54,13 @@ configurations.all {
     exclude group: 'hsqldb'
     exclude group: 'javassist'
     exclude group: 'javax.jts'
-    exclude group: 'joda-time'
-    exclude group: 'net.sf.ehcache'
-    exclude group: 'ome', module: 'formats-gpl'
-    exclude group: 'ome', module: 'jai_imageio'
-    exclude group: 'ome', module: 'lwf-stubs'
-    exclude group: 'ome', module: 'turbojpeg'
-    exclude group: 'omero', module: 'dsl'
-    exclude group: 'omero', module: 'omero-shares'
+    exclude group: 'jmock'
+    exclude group: 'net.sourceforge.findbugs'
+    exclude group: 'org.apache.ant'
     exclude group: 'org.apache.lucene'
     exclude group: 'org.apache.httpcomponents'
     exclude group: 'org.ini4j'
-    exclude group: 'org.postgresql'
     exclude group: 'org.scijava'
-    exclude group: 'org.springframework', module: 'spring-context-support'
-    exclude group: 'org.springframework', module: 'spring-orm'
-    exclude group: 'org.springframework.security'
     exclude group: 'org.uncommons'
     exclude group: 'org.subethamail'
     exclude group: 'pdfbox'
@@ -84,7 +76,7 @@ dependencies {
     compile ('com.glencoesoftware.omero:omero-ms-core:0.2.0-SNAPSHOT') {
         exclude group: 'org.testng', module: 'testng'
     }
-    compile ('omero:blitz:5.2.8-ice36-b69') {
+    compile ('omero:blitz:5.3.4-ice36-b69') {
         exclude group: 'org.testng', module: 'testng'
     }
     testCompile 'org.testng:testng:6.10'
