--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ configurations.all {
 
 dependencies {
     compile 'ch.qos.logback:logback-classic:1.1.7'
-    compile ('com.glencoesoftware.omero:omero-ms-core:0.3.0-SNAPSHOT') {
+    compile ('com.glencoesoftware.omero:omero-ms-core:0.3.0') {
         exclude group: 'org.testng', module: 'testng'
     }
     compile 'io.vertx:vertx-config:3.5.1'
