--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.glencoesoftware.omero'
-version = '0.3.2'
+version = '0.3.3-SNAPSHOT'
 
 mainClassName = 'io.vertx.core.Starter'
 
