--- a/build.gradle
+++ b/build.gradle
@@ -81,8 +81,9 @@ dependencies {
     compile ('omero:blitz:5.4.6-ice36-b87') {
         exclude group: 'org.testng', module: 'testng'
     }
-    compile'io.prometheus:simpleclient:0.4.0'
-    compile'io.prometheus:simpleclient_hotspot:0.4.0'
+    compile 'io.prometheus:simpleclient:0.4.0'
+    compile 'io.prometheus:simpleclient_vertx:0.4.0'
+    compile 'io.prometheus:simpleclient_hotspot:0.4.0'
     testCompile 'org.testng:testng:6.10'
 }
 
