Added first tests for getRegionDef in ImageRegionRequestHandler

--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,7 @@ dependencies {
         exclude group: 'org.testng', module: 'testng'
     }
     testCompile 'org.testng:testng:6.10'
+    testCompile 'org.mockito:mockito-core:2.+'
 }
 
 jar {
