--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,6 @@ repositories {
 
 configurations.all {
     resolutionStrategy.cacheChangingModulesFor 0, 'minutes'
-    exclude group: 'OME'
     exclude group: 'antlr'
     exclude group: 'asm'
     exclude group: 'backport-util-concurrent'
@@ -37,47 +36,51 @@ configurations.all {
     exclude group: 'cglib'
     exclude group: 'checkstyle'
     exclude group: 'com.jamonapi'
+    exclude group: 'com.jgoodies'
+    exclude group: 'com.google.inject'
     exclude group: 'com.mortennobel'
-    exclude group: 'com.zeroc', module: 'freeze'
-    exclude group: 'com.zeroc', module: 'icefreeze'
-    exclude group: 'com.zeroc', module: 'icegrid'
-    exclude group: 'com.zeroc', module: 'icestorm'
+    exclude group: 'com.zeroc'
     exclude group: 'commons-beanutils'
     exclude group: 'commons-codec'
     exclude group: 'commons-collections'
     exclude group: 'commons-io'
     exclude group: 'commons-lang'
     exclude group: 'commons-pool'
-    exclude group: 'dom4j'
-    exclude group: 'edu.ucar'
+    exclude group: 'edu.ucar', module: 'grib'
+    exclude group: 'edu.ucar', module: 'bufr'
     exclude group: 'freemarker'
-    exclude group: 'gnu.getopt'
     exclude group: 'hsqldb'
+    exclude group: 'janino'
     exclude group: 'javassist'
-    exclude group: 'javax.jts'
     exclude group: 'jmock'
+    exclude group: 'geronimo-spec'
+    exclude group: 'log4j'
     exclude group: 'net.sourceforge.findbugs'
+    exclude group: 'omero', module: 'omero-shares'
     exclude group: 'org.apache.ant'
     exclude group: 'org.apache.lucene'
-    exclude group: 'org.apache.httpcomponents'
-    exclude group: 'org.ini4j'
-    exclude group: 'org.uncommons'
+    exclude group: 'org.hibernate', module: 'hibernate-search'
+    exclude group: 'org.hibernate', module: 'jtidy'
     exclude group: 'org.subethamail'
+    exclude group: 'org.uncommons', module: 'reportng'
+    exclude group: 'oro'
     exclude group: 'pdfbox'
     exclude group: 'quartz'
-    exclude group: 'xerces'
-    exclude group: 'xalan'
-    exclude group: 'xml-apis'
-    exclude group: 'zeroc', module: 'ice-db'
+    exclude group: 'velocity-tools'
+    exclude group: 'zeroc'
 }
 
 dependencies {
     compile 'ch.qos.logback:logback-classic:1.1.7'
-    compile 'com.glencoesoftware.omero:omero-ms-core:0.5.0-SNAPSHOT'
+    compile ('com.glencoesoftware.omero:omero-ms-core:0.5.0-SNAPSHOT') {
+        exclude group: 'org.testng', module: 'testng'
+    }
     compile 'io.vertx:vertx-config:3.6.3'
     compile 'io.vertx:vertx-config-yaml:3.6.3'
     compile 'io.vertx:vertx-hazelcast:3.6.3'
-    compile 'omero:server:5.4.10-ice36-b105'
+    compile ('omero:server:5.4.10-ice36-b105') {
+        exclude group: 'org.testng', module: 'testng'
+    }
     testCompile 'org.testng:testng:6.10'
     testCompile 'org.mockito:mockito-core:2.+'
 }
