First pass at building docker images with travis

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,29 +1,19 @@
-FROM centos:centos7
+FROM "openmicroscopy/omero-server"
 MAINTAINER sysadmin@glencoesoftware.com
 #LABEL org.openmicroscopy.release-date="unknown"
 #LABEL org.openmicroscopy.commit="unknown"
 
-RUN yum -y install epel-release && yum -y install ansible sudo unzip which
-
-
-RUN curl -L -o /usr/local/bin/dumb-init \
-    https://github.com/Yelp/dumb-init/releases/download/v1.2.0/dumb-init_1.2.0_amd64 && \
-    chmod +x /usr/local/bin/dumb-init
-ADD entrypoint.sh /usr/local/bin/
 ADD 99-run.sh /startup/
 
-RUN mkdir /opt/setup
-WORKDIR /opt/setup
+USER root
+RUN yum -y install which
+RUN find /startup/ -type f -delete
+RUN mkdir -p /opt/omero/ms/ && chown omero-server:omero-server /opt/omero/ms
 
-# this is what passes for artifact deployment in docker land
-RUN mkdir -p /opt/omero/ms/
-ADD omero-ms-image-region-0.4.3.tar.gz /opt/omero/ms/
-RUN cd /opt/omero/ms && ln -sv omero-ms-image-region-0.4.3 image-region
-
-ADD playbook.yml *.j2 /opt/setup/
-RUN ansible-playbook playbook.yml
-
-USER oms-imageregion
+USER omero-server
+ADD omero-ms-image-region-*.tar.gz /opt/omero/ms/
+RUN find /opt/omero/ms/ -type d -name omero-ms-image-region-\* -maxdepth 1 -print 
+RUN cd /opt/omero/ms && ln -sv $( basename $( find /opt/omero/ms/ -type d -name omero-ms-image-region-\* -maxdepth 1 -print ) ) image-region
 
 EXPOSE 8080
 #VOLUME ["/opt/omero/ms/image-region/logs"]
