--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,9 @@ configurations.all {
 }
 
 dependencies {
+	compile 'io.zipkin.brave:brave:5.6.8'
+	compile 'io.zipkin.brave:brave-http:4.13.6'
+	compile 'io.zipkin.brave:brave-instrumentation-http:5.6.8'
     compile 'ch.qos.logback:logback-classic:1.2.3'
     compile ('com.glencoesoftware.omero:omero-ms-core:0.4.1') {
         exclude group: 'org.testng', module: 'testng'
