--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,8 @@ dependencies {
 	compile 'io.zipkin.brave:brave:5.6.8'
 	compile 'io.zipkin.brave:brave-http:4.13.6'
 	compile 'io.zipkin.brave:brave-instrumentation-http:5.6.8'
+	compile 'io.zipkin.brave:brave-instrumentation-vertx-web:5.3.1'
+	compile 'io.zipkin.reporter2:zipkin-sender-okhttp3:2.10.0'
     compile 'ch.qos.logback:logback-classic:1.2.3'
     compile ('com.glencoesoftware.omero:omero-ms-core:0.4.1') {
         exclude group: 'org.testng', module: 'testng'
