--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
+	mavenCentral()
     jcenter()
     maven {
         name 'Unidata'
@@ -72,6 +73,7 @@ configurations.all {
 }
 
 dependencies {
+	compile 'io.prometheus:simpleclient:0.6.0'
     compile 'io.zipkin.brave:brave:5.6.8'
     compile 'io.zipkin.brave:brave-http:4.13.6'
     compile 'io.zipkin.brave:brave-instrumentation-http:5.6.8'
