--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,7 @@ configurations.all {
 
 dependencies {
 	compile 'io.prometheus:simpleclient:0.6.0'
+	compile 'io.prometheus:simpleclient_vertx:0.6.0'
     compile 'io.zipkin.brave:brave:5.6.8'
     compile 'io.zipkin.brave:brave-http:4.13.6'
     compile 'io.zipkin.brave:brave-instrumentation-http:5.6.8'
