Use omero-ms-core classes for tracing/metrics

--- a/build.gradle
+++ b/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     compile 'io.zipkin.brave:brave-instrumentation-http:5.6.8'
     compile 'io.zipkin.reporter2:zipkin-sender-okhttp3:2.10.0'
     compile 'ch.qos.logback:logback-classic:1.2.3'
-    compile ('com.glencoesoftware.omero:omero-ms-core:0.4.1') {
+    compile ('com.glencoesoftware.omero:omero-ms-core:0.4.1-SNAPSHOT') {
         exclude group: 'org.testng', module: 'testng'
     }
     compile 'io.vertx:vertx-config:3.5.3'
