--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     jcenter()
     maven {
         name 'Unidata'
@@ -83,6 +84,7 @@ dependencies {
         exclude group: 'org.testng', module: 'testng'
     }
     compile 'org.springframework:spring-context-support:4.3.14.RELEASE'
+    compile 'io.prometheus.jmx:collector:0.12.0'
     testCompile 'org.testng:testng:6.10'
     testCompile 'org.mockito:mockito-core:2.+'
 }
