--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     }
     compile 'org.springframework:spring-context-support:4.3.14.RELEASE'
     compile 'io.prometheus.jmx:collector:0.12.0'
+    compile 'io.prometheus:simpleclient_hotspot:0.8.0'
     testCompile 'org.testng:testng:6.10'
     testCompile 'org.mockito:mockito-core:2.+'
 }
