--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.glencoesoftware.omero'
-version = '0.5.0-SNAPSHOT'
+version = '0.5.1-SNAPSHOT'
 
 mainClassName = 'io.vertx.core.Launcher'
 
@@ -71,16 +71,20 @@ configurations.all {
 }
 
 dependencies {
-    compile 'ch.qos.logback:logback-classic:1.1.7'
-    compile ('com.glencoesoftware.omero:omero-ms-core:0.5.0-SNAPSHOT') {
+    compile 'io.prometheus:simpleclient_vertx:0.6.0'
+    compile 'io.prometheus.jmx:collector:0.12.0'
+    compile 'io.prometheus:simpleclient_hotspot:0.8.0'
+    compile 'ch.qos.logback:logback-classic:1.2.3'
+    compile ('com.glencoesoftware.omero:omero-ms-core:0.5.1-SNAPSHOT') {
         exclude group: 'org.testng', module: 'testng'
     }
-    compile 'io.vertx:vertx-config:3.6.3'
-    compile 'io.vertx:vertx-config-yaml:3.6.3'
-    compile 'io.vertx:vertx-hazelcast:3.6.3'
+    compile 'io.vertx:vertx-config:3.8.1'
+    compile 'io.vertx:vertx-config-yaml:3.8.1'
+    compile 'io.vertx:vertx-hazelcast:3.8.1'
     compile ('omero:server:5.4.10-ice36-b105') {
         exclude group: 'org.testng', module: 'testng'
     }
+    compile 'org.springframework:spring-context-support:4.3.14.RELEASE'
     testCompile 'org.testng:testng:6.10'
     testCompile 'org.mockito:mockito-core:2.+'
 }
