--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,19 @@ distributions {
     }
 }
 
+task memoRegenStartScript(type: CreateStartScripts) {
+    mainClassName = "com.glencoesoftware.omero.ms.image.region.MemoRegenerator"
+    applicationName = "memoregenerator"
+    outputDir = new File(project.buildDir, 'scripts')
+    classpath = jar.outputs.files + project.configurations.runtime
+}
+
+applicationDistribution.into("bin") {
+            from(memoRegenStartScript)
+            fileMode = 0755
+}
+
+
 applicationDefaultJvmArgs = [
     "-Dvertx.logger-delegate-factory-class-name=io.vertx.core.logging.SLF4JLogDelegateFactory"
 ]
