--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,8 @@ dependencies {
     compile 'org.springframework:spring-context-support:4.3.14.RELEASE'
     compile 'io.prometheus.jmx:collector:0.12.0'
     compile 'io.prometheus:simpleclient_hotspot:0.8.0'
+    compile 'info.picocli:picocli:3.9.3'
+    compile 'com.univocity:univocity-parsers:2.8.3'
     testCompile 'org.testng:testng:6.10'
     testCompile 'org.mockito:mockito-core:2.+'
 }
