--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.glencoesoftware.omero'
-version = '0.4.6'
+version = '0.4.7-SNAPSHOT'
 
 mainClassName = 'io.vertx.core.Launcher'
 
