--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 group = 'com.glencoesoftware.omero'
 version = '0.4.7-SNAPSHOT'
 
-mainClassName = 'io.vertx.core.Launcher'
+mainClassName = 'com.glencoesoftware.omero.ms.image.region.OmeroVertxLauncher'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
