--- a/build.gradle
+++ b/build.gradle
@@ -74,17 +74,16 @@ configurations.all {
 dependencies {
     compile 'io.prometheus:simpleclient_vertx:0.6.0'
     compile 'ch.qos.logback:logback-classic:1.2.3'
-    compile ('com.glencoesoftware.omero:omero-ms-core:0.4.5') {
+    compile ('com.glencoesoftware.omero:omero-ms-core:0.5.0-SNAPSHOT') {
         exclude group: 'org.testng', module: 'testng'
     }
     compile 'io.vertx:vertx-config:3.8.1'
     compile 'io.vertx:vertx-config-yaml:3.8.1'
     compile 'io.vertx:vertx-micrometer-metrics:3.8.5'
     compile 'io.micrometer:micrometer-registry-prometheus:1.3.0'
-    compile ('omero:blitz:5.4.10-ice36-b105') {
+    compile ('org.openmicroscopy:omero-blitz:5.5.5') {
         exclude group: 'org.testng', module: 'testng'
     }
-    compile 'org.springframework:spring-context-support:4.3.14.RELEASE'
     compile 'io.prometheus.jmx:collector:0.12.0'
     compile 'io.prometheus:simpleclient_hotspot:0.8.0'
     compile 'info.picocli:picocli:4.1.4'
