Create color map for multiple objects

--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'com.univocity:univocity-parsers:2.8.3'
     implementation 'com.zeroc:icegrid:3.6.4'
     implementation 'io.tiledb:tiledb-java:0.3.3-SNAPSHOT'
+    implementation 'com.google.code.gson:gson:2.8.6'
     testImplementation 'org.testng:testng:6.10'
     testImplementation 'org.mockito:mockito-core:2.+'
 }
