--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ repositories {
         url 'https://artifacts.glencoesoftware.com/artifactory/gs-omero-snapshots-local'
     }
     maven {
+        url 'https://repo.glencoesoftware.com/repository/tiledb-snapshots/'
+    }
+    maven {
         url 'https://oss.sonatype.org/content/repositories/snapshots/'
     }
 }
@@ -72,7 +75,7 @@ dependencies {
     implementation 'info.picocli:picocli:4.1.4'
     implementation 'com.univocity:univocity-parsers:2.8.3'
     implementation 'com.zeroc:icegrid:3.6.4'
-    implementation 'io.tiledb:tiledb-java:0.3.3-SNAPSHOT'
+    implementation 'io.tiledb:tiledb-java:0.3.4-gs-SNAPSHOT'
     implementation 'com.google.code.gson:gson:2.8.6'
     testImplementation 'org.testng:testng:6.10'
     testImplementation 'org.mockito:mockito-core:2.+'
