--- a/build.gradle
+++ b/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     implementation 'com.bc.zarr:jzarr:0.3.3-gs-SNAPSHOT'
     implementation 'org.lasersonlab:s3fs:2.2.3'
     testImplementation 'org.testng:testng:6.10'
-    testImplementation 'org.mockito:mockito-core:2.+'
+    testImplementation 'org.mockito:mockito-core:2.28.2'
 }
 
 jar {
