--- a/build.gradle
+++ b/build.gradle
@@ -82,9 +82,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.bc.zarr:jzarr:0.3.3-gs-SNAPSHOT'
     implementation 'org.lasersonlab:s3fs:2.2.3'
-    testImplementation 'org.testng:testng:6.10'
+
+    testImplementation("junit:junit:4.12")
     testImplementation 'org.mockito:mockito-core:2.28.2'
     testImplementation 'com.glencoesoftware:bioformats2raw:0.3.0-SNAPSHOT'
+
 }
 
 jar {
@@ -99,7 +101,7 @@ jar {
 
 test {
   // enable TestNG support (default is JUnit)
-  useTestNG()
+  useJUnit()
 }
 
 distributions {
