Updated appveyor.yml to save test results

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ after_test:
 
 artifacts:
   - path: build\distributions\*
+  - path: build\reports\tests
 
 cache:
   - '%HOME%\.gradle -> build.gradle'
