--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ repositories {
         url 'https://artifacts.glencoesoftware.com/artifactory/ome.releases'
     }
     maven {
+        url 'https://artifacts.glencoesoftware.com/artifactory/ome.external'
+    }
+    maven {
         url 'https://artifacts.glencoesoftware.com/artifactory/gs-omero-snapshots-local'
     }
     maven {
