--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     implementation 'com.univocity:univocity-parsers:2.8.3'
     implementation 'com.zeroc:icegrid:3.6.4'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.bc.zarr:jzarr:0.3.3-gs-SNAPSHOT'
+    implementation 'com.bc.zarr:jzarr:0.3.4'
     implementation 'org.lasersonlab:s3fs:2.2.3'
 
     testImplementation("junit:junit:4.12")
