--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.bc.zarr:jzarr:0.3.4'
     implementation 'org.lasersonlab:s3fs:2.2.3'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.11.1034'
 
     testImplementation("junit:junit:4.12")
     testImplementation 'org.mockito:mockito-core:2.28.2'
