--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,10 @@
-
 plugins {
     id 'application'
     id 'eclipse'
 }
 
 group = 'com.glencoesoftware.omero'
-version = '0.8.4-SNAPSHOT'
+version = '0.8.4'
 
 mainClassName = 'com.glencoesoftware.omero.ms.image.region.OmeroVertxLauncher'
 
