--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,12 @@ version = '0.9.0-SNAPSHOT'
 
 mainClassName = 'com.glencoesoftware.omero.ms.image.region.OmeroVertxLauncher'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.11
+targetCompatibility = 1.11
 
 repositories {
     mavenCentral()
+    mavenLocal()
     maven {
         name 'Unidata'
         url 'https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases'
@@ -68,7 +69,8 @@ dependencies {
     implementation 'io.zipkin.reporter2:zipkin-sender-okhttp3:2.10.0'
     implementation 'ch.qos.logback:logback-classic:1.3.14'
     implementation 'org.slf4j:log4j-over-slf4j:1.7.32'
-    implementation 'com.glencoesoftware.omero:omero-ms-core:0.7.0'
+    implementation 'com.glencoesoftware.omero:omero-zarr-pixel-buffer:0.3.0-SNAPSHOT'
+    implementation 'com.glencoesoftware.omero:omero-ms-core:0.8.0-SNAPSHOT'
     implementation 'io.vertx:vertx-web:3.8.1'
     implementation 'io.vertx:vertx-config:3.8.1'
     implementation 'io.vertx:vertx-config-yaml:3.8.1'
@@ -81,14 +83,15 @@ dependencies {
     implementation 'com.univocity:univocity-parsers:2.8.3'
     implementation 'com.zeroc:icegrid:3.6.4'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.bc.zarr:jzarr:0.3.4'
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+    implementation 'com.bc.zarr:jzarr:0.3.5'
     implementation 'org.lasersonlab:s3fs:2.2.3'
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.11.1034'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.659'
 
     testImplementation("junit:junit:4.12")
     testImplementation 'org.mockito:mockito-core:2.28.2'
     testImplementation 'com.glencoesoftware:bioformats2raw:0.9.1'
-
+    testImplementation 'info.picocli:picocli:4.7.5'
 }
 
 jar {
