--- a/build.gradle
+++ b/build.gradle
@@ -63,10 +63,11 @@ dependencies {
     implementation 'org.slf4j:log4j-over-slf4j:1.7.32'
     implementation 'com.glencoesoftware.omero:omero-zarr-pixel-buffer:0.4.1'
     implementation 'com.glencoesoftware.omero:omero-ms-core:0.9.1'
-    implementation 'io.vertx:vertx-web:3.8.1'
-    implementation 'io.vertx:vertx-config:3.8.1'
-    implementation 'io.vertx:vertx-config-yaml:3.8.1'
-    implementation 'io.vertx:vertx-micrometer-metrics:3.8.5'
+    implementation 'io.vertx:vertx-web:4.5.14'
+    implementation 'io.vertx:vertx-config:4.5.14'
+    implementation 'io.vertx:vertx-config-yaml:4.5.14'
+    implementation 'io.vertx:vertx-micrometer-metrics:4.5.14'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
     implementation 'io.micrometer:micrometer-registry-prometheus:1.3.0'
     implementation 'org.openmicroscopy:omero-blitz:5.8.0'
     implementation 'io.prometheus.jmx:collector:0.12.0'
