--- a/build.gradle
+++ b/build.gradle
@@ -62,11 +62,11 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.3.15'
     implementation 'org.slf4j:log4j-over-slf4j:1.7.32'
     implementation 'com.glencoesoftware.omero:omero-zarr-pixel-buffer:0.5.0'
-    implementation 'com.glencoesoftware.omero:omero-ms-core:0.11.0-SNAPSHOT'
-    implementation 'io.vertx:vertx-web:4.5.14'
-    implementation 'io.vertx:vertx-config:4.5.14'
-    implementation 'io.vertx:vertx-config-yaml:4.5.14'
-    implementation 'io.vertx:vertx-micrometer-metrics:4.5.14'
+    implementation 'com.glencoesoftware.omero:omero-ms-core:0.11.0-rc1'
+    implementation 'io.vertx:vertx-web:4.5.16'
+    implementation 'io.vertx:vertx-config:4.5.16'
+    implementation 'io.vertx:vertx-config-yaml:4.5.16'
+    implementation 'io.vertx:vertx-micrometer-metrics:4.5.16'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
     implementation 'io.micrometer:micrometer-registry-prometheus:1.3.0'
     implementation 'org.openmicroscopy:omero-blitz:5.8.3'
