--- a/build.gradle
+++ b/build.gradle
@@ -131,5 +131,6 @@ applicationDistribution.into("bin") {
 
 
 applicationDefaultJvmArgs = [
-    "-Dvertx.logger-delegate-factory-class-name=io.vertx.core.logging.SLF4JLogDelegateFactory"
+    "-Dvertx.logger-delegate-factory-class-name=io.vertx.core.logging.SLF4JLogDelegateFactory",
+    "-Djava.io.tmpdir=/opt/omero/OMERO.current/var/tmp"
 ]
