--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,9 @@ distributions {
 
 startScripts {
   classpath  = files('$APP_HOME/lib/*')
+  doLast {
+    unixScript.text = unixScript.text.replace("MY_APP_HOME", "'\$APP_HOME'")
+  }
 }
 
 task memoRegenStartScript(type: CreateStartScripts) {
@@ -132,5 +135,5 @@ applicationDistribution.into("bin") {
 
 applicationDefaultJvmArgs = [
     "-Dvertx.logger-delegate-factory-class-name=io.vertx.core.logging.SLF4JLogDelegateFactory",
-    "-Djava.io.tmpdir=/opt/omero/OMERO.current/var/tmp"
+    "-Djava.io.tmpdir=MY_APP_HOME/var/tmp"
 ]
